--- a/history.css
+++ b/history.css
@@ -10,6 +10,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
+    height: auto;
     background: url('back2.jpg') repeat-x;
     /* animation: moveClouds 30s linear infinite; */
     z-index: -1;
