--- a/history.css
+++ b/history.css
@@ -1,16 +1,16 @@
 
 * {
     margin: 0;
-    padding: 0;
+    padding: 10px;
     box-sizing: border-box;
 }
 
-body{
+.background-container{
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 170%;
     background: url('back2.jpg') repeat-x;
     /* animation: moveClouds 30s linear infinite; */
     z-index: -1;
@@ -27,26 +27,15 @@ body{
 
 .history h1 {
     font-size: 45px;
-    text-align: center;
     color: rgb(9, 91, 158);
 }
 
 .history h2 {
-    font-size: 40px;
+    font-size: 23px;
 }
 
 .history p {
-    font-size: 24px;
+    font-size: 18px;
     color: rgb(37, 51, 4);
 }
-
-#hlast{
-    color: hsl(224, 66%, 32%)
-}
-
-#plast{
-    background-color: hsla(0, 0%, 65%, 0.39);
-    font-weight: bolder;
-}
-
 
