--- a/style.css
+++ b/style.css
@@ -32,13 +32,18 @@
     height: 700px;
     text-align: center;
     position: relative;
-    left: 500px;
+    left: 25%;
    
 }
 
-#universityName h1{
-    font-size: 100px;
+#universityName h1 {
+    font-size: 60px;
     color: wheat;
+    text-align: center; /* Center the text horizontally */
+    display: flex;
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+    height: 40vh; /* Make sure the container takes the full viewport height */
 }
 
 #universityName p{
@@ -115,57 +120,6 @@ section {
     padding: 50px;
 }
 
-#glance1 p{
-    font-size: 30px;
-    position: relative;
-    left: 650px;
-    top: -100px;
-    width: 800px;
-    text-align: left;
-
-}
-
-.vertical-line {
-    width: 3px; 
-    height: 300px; /* Make the line extend the full height of its container */
-    background-color: #524f4f; /* Set the color of the vertical line */
-    position: absolute;
-    left: 35%;
-    top: 800px;
-    transform: translateX(-50%);
-}
-
-.circular-arrow-button {
-    display: inline-block;
-    text-decoration: none;
-    position: relative;
-    font-size: 16px;
-    border-radius: 50px;
-    padding: 10px 20px 10px 40px;
-    background-color: #141414;
-    color: #fff;
-    transition: background-color 0.3s;
-    position: relative;
-    left: 700px;
-    top: -40px;
-}
-
-.circular-arrow-button .circle {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin-right: 10px;
-    text-align: center;
-    line-height: 30px;
-
-}
-
-.circular-arrow-button span {
-    font-size: 20px;
-    vertical-align: middle;
-}
 
 .circular-arrow-button:hover {
     background-color: #0056b3;
@@ -291,15 +245,21 @@ section {
 #glance1 p {
     font-size: 18px; /* Adjust font size for responsiveness */
     text-align: center; /* Center the content */
+    margin-left: 30%;
+    margin-bottom: 5%;
+    width: 60%;  
 }
 
 .vertical-line {
     width: 3px;
-    height: 20%; /* Use '100%' for responsiveness */
+    height: 40%; /* Use '100%' for responsiveness */
     background-color: #524f4f;
     position: absolute;
-    left: 50%;
+    left: 30%;
+    top: 800px;
     transform: translateX(-50%);
+
+    
 }
 
 .circular-arrow-button {
@@ -307,10 +267,11 @@ section {
     text-decoration: none;
     font-size: 16px;
     border-radius: 50px;
-    padding: 10px 20px;
+    padding: 10px 30px;
     background-color: #141414;
     color: #fff;
     transition: background-color 0.3s;
+
 }
 
 .circular-arrow-button .circle {
@@ -322,6 +283,7 @@ section {
     margin-right: 10px;
     text-align: center;
     line-height: 30px;
+    
 }
 
 .circular-arrow-button span {
