--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
 /* design the university logo */
 #logo{
     padding: 0;
+    margin-top: -100px ;
+    margin-left: 300px;
+    margin-bottom: 20px;
+    font-size: 39px;
 }
 
 #logo h1{
