--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 /* design the university logo */
+
+.image{
+    margin-left: 300px;
+    margin-top: 40px;
+}
 #logo{
     padding: 0;
     margin-top: -100px ;
-    margin-left: 300px;
-    margin-bottom: 20px;
+    margin-left: 470px;
+    margin-bottom: 40px;
     font-size: 39px;
 }
 
