--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     margin-left: 300px;
     margin-top: 40px;
 }
+
 #logo{
     padding: 0;
     margin-top: -100px ;
@@ -11,6 +12,20 @@
     margin-bottom: 30px;
     font-size: 39px;
 }
+
+.mission{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-weight: bolder;
+}
+
+.vission{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-weight: bolder;
+    margin-bottom: 30px;
+}
+
 
 #logo h1{
     color: white;
